--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-clipboard/clipboard": "^1.15.0",
     "@react-native-community/slider": "^4.5.5",
     "formik": "^2.4.6",
     "react": "18.3.1",
